@@ -55,21 +55,15 @@ import (
 	"unsafe" // Actually safe - only uses Sizeof
 )
 
-type branchMapping struct {
-	match   *regexp.Regexp
-	replace string
-}
-
 type svnReader struct {
-	maplock        sync.Mutex         // Lock modification of shared maps
-	branchify      map[int][][]string // Parsed branchification setting
-	branchMappings []branchMapping
-	revisions      []RevisionRecord
-	revmap         map[revidx]revidx
-	backfrom       map[revidx]revidx
-	streamview     []*NodeAction // All nodes in stream order
-	hashmap        map[string]*NodeAction
-	history        *History
+	maplock    sync.Mutex         // Lock modification of shared maps
+	branchify  map[int][][]string // Parsed branchification setting
+	revisions  []RevisionRecord
+	revmap     map[revidx]revidx
+	backfrom   map[revidx]revidx
+	streamview []*NodeAction // All nodes in stream order
+	hashmap    map[string]*NodeAction
+	history    *History
 	// a map from SVN branch names to a revision-indexed list of "last commits"
 	// (not to be used directly but through lastRelevantCommit)
 	lastCommitOnBranchAt map[string][]*Commit
@@ -857,7 +851,6 @@ func nodePermissions(node NodeAction) string {
 func (sp *StreamParser) initBranchify(options stringSet) bool {
 	// Parse branchify to speed up things later
 	sp.branchify = make(map[int][][]string)
-	sp.branchMappings = make([]branchMapping, 0)
 	explicit := false
 	for option := range options.Iterate() {
 		if strings.HasPrefix(option, "--branchify=") {
@@ -875,26 +868,6 @@ func (sp *StreamParser) initBranchify(options stringSet) bool {
 				l := len(split)
 				sp.branchify[l] = append(sp.branchify[l], split)
 			}
-		} else if strings.HasPrefix(option, "--branchmap=") {
-			pattern := option[12:]
-			separator := pattern[0]
-			if separator != pattern[len(pattern)-1] {
-				croak("Regexp '%s' did not end with separator character", pattern)
-				return false
-			}
-			stuff := strings.SplitN(pattern[1:len(pattern)-1], string(separator), 2)
-			match, replace := stuff[0], stuff[1]
-			if replace == "" || match == "" {
-				croak("Regexp '%s' has an empty search or replace part", pattern)
-				return false
-			}
-			re, err := regexp.Compile(match)
-			if err != nil {
-				croak("Regexp '%s' is ill-formed", pattern)
-				return false
-			}
-			sp.branchMappings = append(sp.branchMappings, branchMapping{re, replace})
-
 		}
 	}
 	return true
@@ -2645,43 +2618,31 @@ func svnGitifyBranches(ctx context.Context, sp *StreamParser, options stringSet,
 	for i, event := range sp.repo.events {
 		if commit, ok := event.(*Commit); ok {
 			commit.simplify()
-			matched := false
-			for _, item := range sp.branchMappings {
-				result := GoReplacer(item.match, commit.Branch+svnSep, item.replace)
-				if result != commit.Branch+svnSep {
-					matched = true
-					commit.setBranch(filepath.Join("refs", cleanName(sp, result)))
-					break
-				}
-				baton.twirl()
-			}
-			if !matched {
-				commit.setBranch(cleanName(sp, commit.Branch))
-				if commit.Branch == "" {
-					// File or directory is not under any recognizable branch.
-					// Shuffle it off to branch with an illegal name.
-					maplock.Lock()
-					baseBranchnames.Add(illegalSegment)
-					maplock.Unlock()
-					commit.setBranch(illegalBranch)
-				} else if commit.Branch == "trunk" {
-					commit.setBranch(filepath.Join("refs", "heads", "master"))
-				} else if strings.HasPrefix(commit.Branch, "tags/") {
-					commit.setBranch(filepath.Join("refs", commit.Branch))
-				} else if strings.HasPrefix(commit.Branch, "branches/") {
-					maplock.Lock()
-					baseBranchnames.Add(commit.Branch[9:])
-					maplock.Unlock()
-					commit.setBranch(filepath.Join("refs", "heads", commit.Branch[9:]))
-				} else {
-					// Uh oh
-					maplock.Lock()
-					baseBranchnames.Add(commit.Branch)
-					maplock.Unlock()
-					commit.setBranch(filepath.Join("refs", "heads", commit.Branch))
-					if logEnable(logEXTRACT) {
-						logit("nonstandard branch %s at %s", commit.Branch, commit.idMe())
-					}
+			commit.setBranch(cleanName(sp, commit.Branch))
+			if commit.Branch == "" {
+				// File or directory is not under any recognizable branch.
+				// Shuffle it off to branch with an illegal name.
+				maplock.Lock()
+				baseBranchnames.Add(illegalSegment)
+				maplock.Unlock()
+				commit.setBranch(illegalBranch)
+			} else if commit.Branch == "trunk" {
+				commit.setBranch(filepath.Join("refs", "heads", "master"))
+			} else if strings.HasPrefix(commit.Branch, "tags/") {
+				commit.setBranch(filepath.Join("refs", commit.Branch))
+			} else if strings.HasPrefix(commit.Branch, "branches/") {
+				maplock.Lock()
+				baseBranchnames.Add(commit.Branch[9:])
+				maplock.Unlock()
+				commit.setBranch(filepath.Join("refs", "heads", commit.Branch[9:]))
+			} else {
+				// Uh oh
+				maplock.Lock()
+				baseBranchnames.Add(commit.Branch)
+				maplock.Unlock()
+				commit.setBranch(filepath.Join("refs", "heads", commit.Branch))
+				if logEnable(logEXTRACT) {
+					logit("nonstandard branch %s at %s", commit.Branch, commit.idMe())
 				}
 			}
 		}
